# scrapling-fetch-mcp

./: README.md  pyproject.toml
src/scrapling_fetch_mcp/: _fetcher.py  _markdownify.py  _scrapling.py  mcp.py  tools.py
src/scrapling_mcp/: _scrapling.py  mcp.py  scrapling.py
