[project]
name = "scrapling-mcp"
version = "0.0.1"
description = "MCP server for Scrapling. It's intended use-case is to fetch docs from URLs without getting blocked."
readme = "README.md"
authors = [
    { name = "restlessronin", email = "88921269+restlessronin@users.noreply.github.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["mcp>=1.3.0", "packaging>=24.1, <25.0", "scrapling>=0.2.96"]

[project.urls]
"Homepage" = "https://github.com/cyberchitta/scrapling-mcp"
"Bug Tracker" = "https://github.com/cyberchitta/scrapling-mcp/issues"

[project.scripts]
scrapling-mcp = "scrapling_mcp.mcp:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
